# forge

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FRAMEWORK_V3.md  FRAMEWORK_V4.md  LICENSE  MANIFEST.in  Makefile  README.md  SCHEMA_REFERENCE_V3.md  SCHEMA_REFERENCE_V4.md  pyproject.toml  setup.py
old-forge-v2/: .editorconfig  pyproject.toml
old-forge-v2/.agents/skills/forge-cast/: SKILL.md
old-forge-v2/.agents/skills/forge-plan/: SKILL.md
old-forge-v2/.agents/skills/forge-spec/: SKILL.md
old-forge-v2/.github/workflows/: ci.yml  release.yml
old-forge-v2/examples/: README.md
old-forge-v2/examples/minimal-cli/apps/cli/src/: main.txt
old-forge-v2/examples/minimal-cli/forge/: system.yaml
old-forge-v2/examples/minimal-cli/forge/types/: CliStatusOutput.yaml
old-forge-v2/examples/minimal-cli/forge/units/: cli.yaml
old-forge-v2/examples/minimal-cli/forge/verification/flows/: cli_report_flow.yaml
old-forge-v2/examples/minimal-cli/forge/verticals/: core.yaml  reports.yaml
old-forge-v2/examples/minimal-cli/forge/workbench/: plan.yaml  validation.md
old-forge-v2/examples/minimal-full-stack/: README.md
old-forge-v2/examples/minimal-full-stack/.agents/skills/forge-spec/: SKILL.md
old-forge-v2/examples/minimal-full-stack/apps/api/src/: server.py
old-forge-v2/examples/minimal-full-stack/apps/app/: index.html
old-forge-v2/examples/minimal-full-stack/forge/: bootstrap.yaml
old-forge-v2/examples/minimal-full-stack/forge/operations/: open_dashboard.yaml  open_profile.yaml
old-forge-v2/examples/minimal-full-stack/forge/stores/: main.yaml
old-forge-v2/examples/minimal-full-stack/forge/surfaces/: load_profile_http.yaml  profile_route.yaml
old-forge-v2/examples/minimal-full-stack/forge/types/: DashboardPayload.yaml  DashboardRouteInput.yaml  ProfilePayload.yaml
old-forge-v2/examples/minimal-full-stack/forge/workbench/: status.yaml
old-forge-v2/examples/minimal-full-stack/infra/: README.md
old-forge-v2/examples/minimal-worker-service/: .gitignore
old-forge-v2/examples/minimal-worker-service/docs/: forge-v2-schema.md
old-forge-v2/examples/minimal-worker-service/forge/: system.yaml
old-forge-v2/examples/minimal-worker-service/forge/stores/: main.yaml
old-forge-v2/examples/minimal-worker-service/forge/types/: JobResult.yaml
old-forge-v2/examples/minimal-worker-service/forge/verticals/: core.yaml
old-forge-v2/examples/minimal-worker-service/forge/workbench/: discovery.md  validation.md
old-forge-v2/src/cli/: __main__.py  common.py  forge.py  workbench.py
old-forge-v2/src/cli/assets/frameworks/cast/: FRAMEWORK.md
old-forge-v2/src/cli/commands/: context.py  graph.py  init.py
old-forge-v2/tests/: test_cli.py
old-forge-v2/v1/cli/: LICENSE  README.md  SECURITY.md  forge-graph.html
old-forge-v2/v1/cli/.github/: CODEOWNERS  pull_request_template.md
old-forge-v2/v1/cli/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
old-forge-v2/v1/cli/.github/workflows/: ci.yml  release.yml
old-forge-v2/v1/cli/docs/: framework-structure.md
old-forge-v2/v1/cli/example/: graph-deployments.html  graph.html
old-forge-v2/v1/cli/example/spec/: conception.yaml
old-forge-v2/v1/cli/scripts/: install-skills.sh
old-forge-v2/v1/cli/src/cli/: __main__.py  forge.py  walker.py
old-forge-v2/v1/cli/tests/: test_find.py  test_index.py  test_init.py  test_walker.py
old-forge-v2/v1/docs/: framework-overview.md
old-forge-v2/v1/example/: L1_conventions.yaml
old-forge-v2/v1/example/L2_modules/: INV.yaml  ORD.yaml
old-forge-v2/v1/example/L3_atoms/: atm.pay.charges_schema.yaml  atm.usr.email_validity_classifier.yaml
old-forge-v2/v1/skills/forge-armour/assets/: armour-history.template.md
old-forge-v2/v1/skills/forge-cast/: SKILL.md
old-forge-v2/v1/skills/forge-discover/: SKILL.md
old-forge-v2/v1/skills/forge-discover/assets/: discovery-notes.template.md
old-forge-v2/v1/templates/L1/: L1_conventions.guide.md  L1_conventions.schema.md
(+348 files in other folders)
