[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-forge-cli"
version = "2.0.1"
description = "Context walker for the Forge spec system"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
forge = "cli.forge:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*"]

[tool.setuptools.package-data]
cli = ["framework.yaml", "skills/*/SKILL.md", "skills/*/references/*", "skills/*/assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
