[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-forge-cli"
version = "2.1.10"
description = "Forge V3 context CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.15",
    "pytest>=8",
    "ruff>=0.11",
    "twine>=5.1",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
forge = "cli.forge:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*"]

[tool.setuptools.package-data]
cli = ["assets/*.svg", "assets/*.html", "resources/*.md", "resources/skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 160
target-version = "py311"
extend-exclude = ["src/cli/resources/skills"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
files = ["src/cli"]
mypy_path = ["src"]
exclude = ["^src/cli/resources/skills/"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "cli.commands.audit",
    "cli.commands.context",
    "cli.schema",
]
ignore_errors = true
