[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-forge-cli"
dynamic = ["version"]
description = "Forge V2 schema runtime and workbench CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]
authors = [
  {name = "Will Defina"}
]
keywords = ["forge", "software-architecture", "schema", "cli", "agentic-development"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/GreyFlames07/forge"
Repository = "https://github.com/GreyFlames07/forge"
Issues = "https://github.com/GreyFlames07/forge/issues"
Documentation = "https://github.com/GreyFlames07/forge"

[project.scripts]
forge = "cli.forge:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.dynamic]
version = {attr = "cli.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*"]

[tool.setuptools.package-data]
cli = [
  "assets/docs/*.md",
  "assets/frameworks/*/FRAMEWORK.md",
  "assets/agents_skills/*/SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
